Huge attack on static analysis bugs, PMD, checkstyle, findbugs warnings
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1352052 13f79535-47bb-0310-9956-ffa450edef68